# project_2_1

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  docker-compose.yml  index.py  proba.py  pyproject.toml  user_log_pass.py
assets/: custom-script.js  data_picker.css  elements.css  form.css  style.css  tv.css
commands/main/: celery.py
pages/: __init__.py  index.py  login.py  technical_work.py
pages/departmens/: __init__.py  departaments.py
pages/dev/: __init__.py
pages/users/: __init__.py  active_and_staff.py  count_users.py  last_log_users.py  offline_users.py  superuser_last_input.py
pgdata/: dump_file_from_server.dump
queries/: __init__.py
queries/main/: __init__.py  departments.py  users.py
static/examples/: sids.xlsx
static/search_demo_api/: dic_app.pkl  dic_device_brand_id.pkl  dic_device_family_id.pkl  dic_device_model_id.pkl  dic_os_family.pkl  dic_settlement_id.pkl  dic_source_id.pkl  dic_test_version.pkl  dic_ua_family.pkl  dic_user_country_id.pkl
static/search_results_ltr/: user_parameters_naming_en_ru.pkl
static/sentry_cdn/7.3.1/: bundle.min.js
templates/: __init__.py  error.py  flash.py  layout.py  main.py  page.py
utils/: WSGIServerClass.py  __init__.py  auth.py  auther_service.py  category.py  conditions.py  dataframe.py  filter_dataframe.py  graph_wrapper.py  page.py  pages.py  pages_test.py  pivot_table_wrapper.py  sql.py  sql_test.py  table_format.py  table_wrapper.py  tag.py  user.py  validate.py  words_preprocessor.py
utils/connectors/: __init__.py  command_wraper.py  postgres.py  query_wraper.py
utils/styles/: icons.py  themes.py
